--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,7 +1,8 @@
 ion-searchbar {
-  margin-top: 14%;
+  margin: 14% 0 2% 0;
   padding: 10px;
   border-radius: 30px;
+  --font-size: 3em;
 }
 // For the carosuel
 .carousel {
@@ -27,7 +28,7 @@ ion-searchbar {
 
 .category-title {
   // color: #092042;
-  color: var(--ion-color-secondary, black);
+  // color: var(--ion-color-secondary, black);
   margin-left: 10px;
   font-weight: 600;
   margin-bottom: -1px;
