--- a/src/app/pages/movie-page/movie-page.page.scss
+++ b/src/app/pages/movie-page/movie-page.page.scss
@@ -253,3 +253,9 @@ ion-button {
 .reviews__add-review__button{
   margin-top: 24px;
 }
+
+.bottom-div__play-btn{
+  height: 40px;
+  margin: 0 auto;
+  margin-bottom: 5px;
+}
