--- a/src/app/pages/rating-differences-modal/rating-differences-modal.page.scss
+++ b/src/app/pages/rating-differences-modal/rating-differences-modal.page.scss
@@ -1,6 +1,6 @@
 ion-title{
-  color: var(--ion-color-primary, black);
-  font-size: 20px;
+  // color: var(--ion-color-primary, black);
+  font-size: 18px;
 }
 
 .centre-div{
