--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -24,7 +24,7 @@
               </ion-col>
             </ion-row>
           </ion-col>
-          <ion-icon (click)="auth.SignOut()" name="log-out" color="danger" class="user-profile__log-out__button">
+          <ion-icon (click)="alertLogout()" name="log-out" color="danger" class="user-profile__log-out__button">
           </ion-icon>
         </ion-row>
       </ion-grid>
