--- a/src/global.scss
+++ b/src/global.scss
@@ -135,3 +135,9 @@ margin: 0 auto;
   padding: 10px;
   background-color: var(--ion-text-color-light-grey, grey);
 }
+
+.toastAboveTab{
+  position: fixed;
+  bottom: 300px;
+}
+
