YouTubePlayer playing in fullscreen, with ngx plugin

--- a/src/app/pages/movie-page/movie-page.page.html
+++ b/src/app/pages/movie-page/movie-page.page.html
@@ -144,6 +144,9 @@
         <ion-button color="primary" (click)="invokeVideoPlayer()" class="bottom-div__play-btn">
           <ion-icon name="play"></ion-icon>
         </ion-button>
+        <ion-button color="primary" (click)="openMyVideo()" class="bottom-div__play-btn">
+          <ion-icon name="play(ngx)"></ion-icon>
+        </ion-button>
       </ion-item>
 
       <img style="width: 100%" src="{{movieTrailerThumb}}" alt="Movie Trailer Thumbnail" />
