--- a/src/app/pages/movie-page/movie-page.page.scss
+++ b/src/app/pages/movie-page/movie-page.page.scss
@@ -108,16 +108,19 @@ ion-col{
 .top-div__buttons{
     display: flex;
     justify-content: space-evenly;
-    margin: 0 16px;
-
+    // margin: 0 16px;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 ion-button {
     --border-radius: 32px;
-    width: 40%;
+    // width: 40%;
     font-weight: 600;
-    font-size: 16px;
+    font-size: 15px;
     padding: 2px;
+    // --height: 40px;
 }
 
 .bottom-div{
