Fixed positioning of play button for movie trailer

--- a/src/app/components/rating-explainer/rating-explainer.component.html
+++ b/src/app/components/rating-explainer/rating-explainer.component.html
@@ -1,2 +1,12 @@
-<h2>How does this work?</h2>
-<p>Rating Differnces is a feature that lets you compare</p>
+<div class="rating-explainer-div">
+  <h2>How does this work?</h2>
+  <p>Rating differences compares the rate back rating with the senders rating for each recommendation sent and
+    received.<br>
+    These rating differences are accumulated and displayed beside each persons name</p>
+  <ul>
+    <li> <b>+</b> means your accumulated ratings are <b>higher</b> than than that persons</li>
+    <li> <b>-</b> means you accumulated ratings are <b>lower</b> than than that persons</li>
+    <li>e.g <b>"John Smith -3"</b> means my accumulated ratings are 3 stars lower than 'John Smiths' accumulated
+      ratings </li>
+  </ul>
+</div>
