--- a/src/app/pages/movie-page/movie-page.page.scss
+++ b/src/app/pages/movie-page/movie-page.page.scss
@@ -257,8 +257,30 @@ ion-button {
   margin-top: 24px;
 }
 
+.bottom-div__trailer-div{
+  position: relative;
+  margin-bottom: 40px;
+
+}
+
 .bottom-div__play-btn{
-  height: 40px;
-  margin: 0 auto;
-  margin-bottom: 5px;
+  // height: 40px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+  // padding-left: 5px;
+}
+
+.bottom-div__play-btn__icon{
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
 }
