--- a/src/app/pages/registration/registration.page.html
+++ b/src/app/pages/registration/registration.page.html
@@ -9,7 +9,7 @@
 <ion-content>
 
   <div class="custom-splash-screen">
-    <h1>Welcome to FlickMate</h1>
+    <!-- <h1>Welcome to FlickMate</h1> -->
     <img class="custom-splash-screen--img" src="assets/registration-splash.png" width="70%">
   </div>
 
