--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -45,7 +45,7 @@
   </ng-template>
 
   <!-- <h3 class="ion-text-center"> Recommendations</h3> -->
-  <h3 class="home-tab__recs-title"> Recommendations:</h3>
+  <h3 class="home-tab__recs-title"> Recommendations</h3>
   <ion-segment [(ngModel)]="segmentModel" class="home-tab__rating-differences--segment">
     <ion-segment-button (click)="getCategory()" value="received">
       Received
