--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -52,14 +52,14 @@
         </ion-col>
       </ion-row>
 
-      <h3 class="category-title">Popular Among Friends</h3>
+      <!-- <h3 class="category-title">Popular Among Friends</h3>
       <ion-row class="carousel">
         <ion-col class="ion-pad">
           <span *ngFor="let item of topRatedMovies">
             <img class="movie-thumb" src="{{posterUrl}}{{item.poster_path}}" />
           </span>
         </ion-col>
-      </ion-row>
+      </ion-row> -->
     </ion-grid>
   </div>
 </ion-content>
