--- a/src/app/pages/registration/registration.page.scss
+++ b/src/app/pages/registration/registration.page.scss
@@ -12,7 +12,7 @@ ion-content{
 h1{
   display: block;
   object-fit: contain;
-  margin-top: 30%;
+  margin-top: 20px;
   text-align: center;
   font-size: 2.2em;
   color: var( --ion-color-secondary,#114084 );
@@ -24,7 +24,7 @@ h1{
   margin: 0 auto;
   display: block;
   object-fit: contain;
-  margin-top: 5%;
+  margin-top: 25%;
 }
 
 
