--- a/src/app/pages/review-modal/review-modal.page.html
+++ b/src/app/pages/review-modal/review-modal.page.html
@@ -37,7 +37,7 @@
     </ion-row>
     <ion-row>
       <ion-col class="text-center">
-        <ion-button class="review-content__submit-button" (click)="submitReview()">Sumbit</ion-button>
+        <ion-button class="review-content__submit-button" (click)="submitReview()">Submit</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
